--- a/ressources/liaisons/scss/pages/catalogue.scss
+++ b/ressources/liaisons/scss/pages/catalogue.scss
@@ -1,46 +1,136 @@
 .catalogue {
-    &__affichage {
-      border: black 2px solid;
+  &__affichage {
+    display: none;
+    @media(min-width: $DESKTOP-NORMAL){
+      display:flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  &__btn {
+    background-color: $TURQUOISE;
+    color: white;
+    padding: 8px 16px;
+    font-size: 16px;
+    border: none;
+    border-radius: 50px;
+
+    &--categories {
+      margin: 8px;
     }
 
-    &__categories {
-      background-color: #EEEEEE;
+    &--ajouterPanier {
+      margin: 10px;
+      display: inline-block;
     }
 
-    &__lesLivres {
-      border: #0c5460 solid 2px;
+    &--enSavoirPlus {
+      color: black;
+      background-color: $PEAU;
+      margin: 10px;
+      display: inline-block;
     }
+  }
 
-    &__livre {
-      background-color: #9fcdff;
+  &__categories {
+    background-color: #EEEEEE;
+    display: none;
+
+    &__liste {
       list-style-type: none;
+      padding: 0;
     }
 
-    &__nbParPages {
-      border: pink 2px solid;
-    }
-
-    &__rangee--1 {
-      background-color: #17a2b8;
-    }
-
-    &__rangee--2 {
-      background-color: greenyellow;;
-    }
-    &__rechercher {
-      display: none;
-    }
-  @media (min-width: $TABLETTE) {
-    &__rechercher {
+    @media(min-width: $TABLETTE) {
       display: inline;
     }
   }
 
+  &__lesLivres {
+  }
+
+  &__lien {
+    padding-left: 10px;
+    color: $ROUGE;
+    text-decoration: underline;
+
+    &--actif {
+      color: black;
+      pointer-events: none;
+      cursor: default;
+      text-decoration: none;
+    }
+  }
+
+  &__livre {
+    background-color: lightgrey;
+    list-style-type: none;
+  }
+
+  &__nbParPages {
+
+  }
+
+  &__rangee--1 {
+
+  }
+
+  &__rangee--2 {
+  }
+
+  &__rechercher {
+    display: none;
+  }
+
   @media (min-width: $DESKTOP-NORMAL) {
-
+    .dropbtn {
+      display: none;
+    }
+    &__rechercher {
+      display: inline;
+    }
   }
+}
 
-  @media (min-width: $DESKTOP-LARGE) {
-
+// CATÉGORIES
+.dropbtn {
+  background-color: $TURQUOISE;
+  color: white;
+  padding: 10px 32px;
+  font-size: 16px;
+  border: none;
+  border-radius: 50px;
+  @media (min-width: $TABLETTE) {
+    display: none;
   }
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 360px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
 }
