--- a/ressources/liaisons/scss/pages/_catalogue.scss
+++ b/ressources/liaisons/scss/pages/_catalogue.scss
@@ -136,7 +136,11 @@
   &__nbParPages {
 
   }
-
+  &__prix {
+    font-size: 42px;
+    color:white;
+    padding-left: 60%;
+  }
   &__rangee--1 {
 
   }
