--- a/ressources/liaisons/scss/pages/_accueil.scss
+++ b/ressources/liaisons/scss/pages/_accueil.scss
@@ -28,14 +28,42 @@
           }
         }
       }
+      .lien_contenu {
+        display: block;
+        position: absolute;
+        text-align: center;
+        margin: 0 auto;
+        width: 100%;
+        bottom: 25%;
+        a {
+          border: solid 2px $PEAU;
+          border-radius: 50px;
+          padding: 15px;
+          text-decoration: none;
+          color: $PEAU;
+        }
+        @media (min-width: $TABLETTE) and (max-width: $DESKTOP-NORMAL) {
+          bottom: 15%;
+        }
+      }
       h1 {
-        font-family: "Lato", Arial, serif;
         color: white;
         position: absolute;
         display: block;
         text-align: center;
         width: 100%;
         top: 30%;
+        margin-top: 17.5%;
+        font-size: 2.5rem !important;
+        font-weight: 900;
+        @media (min-width: $DESKTOP-NORMAL) {
+          margin-top: 10%;
+          font-size: 3.8rem !important;
+        }
+        @media (min-width: $TABLETTE) and (max-width: $DESKTOP-NORMAL) {
+          margin-top: 15%;
+          font-size: 3.8rem !important;
+        }
       }
     }
   }
