--- a/ressources/liaisons/scss/modules/_header.scss
+++ b/ressources/liaisons/scss/modules/_header.scss
@@ -1,30 +1,44 @@
 /**
  * @author Samuel Loranger
  */
-header{
+.header{
   background-color: $GRIS_FONCE;
   margin-bottom: 25px;
   width: 100%;
   position: fixed;
   top: 0;
   z-index: 999;
+  transition: 0.50s ease-in-out;
 
+  &--transparent{
+    background: rgb(68,68,68);
+    background: linear-gradient(180deg, rgba(68,68,68,0.2007177871148459) 67%, rgba(68,68,68,0) 100%);
+  }
 
   .btnSeConnecter{
     border: 2px solid $PEAU;
     border-radius: 25px;
     padding: 5px 10px;
+    height: 40px;
+    text-align: center;
+    width: 250px;
+    margin: 25% auto 0 auto;
+
+    @media(min-width: $DESKTOP-NORMAL){
+      width: 150px;
+      margin: 0;
+    }
   }
 
   /**
    * CONTENEUR DU HEADER
    */
   .conteneur-header{
-    padding: 22px 15px 22px 10px;
+    padding: 8px 2px;
     display: flex;
 
-    &--petit{
-      padding-top: 8px;
+    @media(min-width: $DESKTOP-NORMAL){
+      padding: 22px 15px 22px 10px;
     }
 
     /**
@@ -54,17 +68,19 @@ header{
           width: 100%;
           position: relative;
 
-          /**
-            * LOGO TRACES
-            */
           .logoTraces{
-            width: 45%;
+            width: 38%;
             transition: 0.15s ease-in-out;
             display: flex;
             justify-content: center;
+            opacity: 1;
 
             &--petit{
               width: 30%;
+            }
+
+            &--cache{
+              opacity: 0;
             }
 
             img{
@@ -187,11 +203,16 @@ header{
         justify-content: space-between;
         width: 100%;
 
-        /**
-         * LOGO TRACES
-         */
         .logoTraces{
           width: 12%;
+          transition: 0.50s ease-in-out;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          &--cache{
+            width: 0;
+          }
 
           img{
             max-width: 100%;
@@ -210,9 +231,11 @@ header{
             list-style-type: none;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             margin: 0;
             height: 100%;
             padding-left: 15px;
+
 
             @media(min-width: $DESKTOP-LARGE){
               padding-left: 30px;
