update panier + css

--- a/ressources/liaisons/scss/styles.scss
+++ b/ressources/liaisons/scss/styles.scss
@@ -42,3 +42,4 @@ $hamburger-layer-spacing: 10px;
 @import "pages/accueil";
 @import "pages/catalogue";
 @import "pages/fiche";
+@import "pages/panier";
