--- a/ressources/liaisons/scss/pages/_catalogue.scss
+++ b/ressources/liaisons/scss/pages/_catalogue.scss
@@ -1,3 +1,82 @@
+.coupsCoeur {
+  margin-top: 50px;
+  h2 {
+    margin-bottom: 40px;
+  }
+  &__groupe {
+    &__vignette {
+      margin: 0 0 20px 0;
+      position: relative;
+      z-index: 0;
+      &__image {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        &__foreground {
+          position: absolute;
+          left: 0;
+          right: 0;
+          background-color: rgba(0, 0, 0, 0.5);
+          //background-color: white;
+          width: 100%;
+          height: 100%;
+          z-index: 998;
+        }
+        img {
+          width: 100%;
+          max-width: 100%;
+        }
+      }
+
+      &__details {
+        //&__info {
+        //  height: 70%;
+        //}
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        &__titre {
+          color: white;
+        }
+        &__auteur {
+          color: $PEAU;
+        }
+        &__prix {
+          color: white;
+          font-size: 50px !important;
+        }
+        position: absolute;
+        top: 5%;
+        left: 10%;
+        width: 80%;
+        height: 90%;
+        z-index: 999;
+      }
+
+      &__boutons {
+        //height: 60% !important;
+        &__bouton_plus {
+          background-color: $PEAU;
+          display: block;
+          text-align: center;
+          color: black;
+          border-radius: 50px;
+          padding: 7px;
+        }
+        &__bouton_panier {
+          background-color: $TURQUOISE;
+          display: block;
+          text-align: center;
+          color: white;
+          border-radius: 50px;
+          padding: 7px;
+          margin: 5px 0 15px 0;
+          //margin: 0;
+        }
+      }
+    }
+  }
+}
 .catalogue {
   //&__affichage {
   //  display: none;
@@ -136,10 +215,10 @@
 
   &__livre {
     list-style-type: none;
-    background-color: $GRIS_FONCE;
     width: 100%;
     margin-bottom: 5%;
     height: 350px;
+    background-image: linear-gradient(to right, $GRIS_FONCE , #555);
 
     &__titreEtAuteur {
       padding-left: 5%;
