--- a/ressources/liaisons/scss/pages/_catalogue.scss
+++ b/ressources/liaisons/scss/pages/_catalogue.scss
@@ -1,92 +1,4 @@
-.coupsCoeur {
-  margin-top: 50px;
-  h2 {
-    margin-bottom: 40px;
-  }
-  &__groupe {
-    &__vignette {
-      margin: 0 0 20px 0;
-      position: relative;
-      z-index: 0;
-      &__image {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        &__foreground {
-          position: absolute;
-          left: 0;
-          right: 0;
-          background-color: rgba(0, 0, 0, 0.5);
-          //background-color: white;
-          width: 100%;
-          height: 100%;
-          z-index: 998;
-        }
-        img {
-          width: 100%;
-          max-width: 100%;
-        }
-      }
-
-      &__details {
-        //&__info {
-        //  height: 70%;
-        //}
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        &__titre {
-          color: white;
-        }
-        &__auteur {
-          color: $PEAU;
-        }
-        &__prix {
-          color: white;
-          font-size: 50px !important;
-        }
-        position: absolute;
-        top: 5%;
-        left: 10%;
-        width: 80%;
-        height: 90%;
-        z-index: 999;
-      }
-
-      &__boutons {
-        //height: 60% !important;
-        &__bouton_plus {
-          background-color: $PEAU;
-          display: block;
-          text-align: center;
-          color: black;
-          border-radius: 50px;
-          padding: 7px;
-        }
-        &__bouton_panier {
-          background-color: $TURQUOISE;
-          display: block;
-          text-align: center;
-          color: white;
-          border-radius: 50px;
-          padding: 7px;
-          margin: 5px 0 15px 0;
-          //margin: 0;
-        }
-      }
-    }
-  }
-}
 .catalogue {
-  //&__affichage {
-  //  display: none;
-  //
-  //  @media(min-width: $DESKTOP-NORMAL) {
-  //    display: flex;
-  //    flex-wrap: wrap;
-  //  }
-  //}
-
   &__auteurs {
     list-style-type: none;
     color: $BLANC;
@@ -94,14 +6,16 @@
     padding-left: 15px;
     @media(min-width: $DESKTOP-NORMAL) {
       color: $BEIGE;
+      font-size: 16px;
+      padding: 0;
+      margin: 0;
     }
-
   }
 
   &__btn {
     background-color: $TURQUOISE;
     color: white;
-    padding: 8px 16px;
+    padding: 8px 50px;
     font-size: 16px;
     border: none;
     border-radius: 50px;
@@ -111,13 +25,17 @@
     }
 
     &--ajouterPanier {
-      margin: 10px;
-      display: inline-block;
-
       &:hover {
         background-color: darken($TURQUOISE, 5);
         color: $BLANC;
       }
+
+      @media(min-width: $DESKTOP-NORMAL) {
+        padding: 2px 8px;
+        font-size: 14px;
+        margin-top: 5px;
+      }
+
     }
 
     &--categories {
@@ -132,13 +50,23 @@
     &--enSavoirPlus {
       color: black;
       background-color: $PEAU;
-      margin: 10px;
       display: inline-block;
+      margin-bottom: 20px;
 
       &:hover {
         color: black;
         background-color: darken($PEAU, 5);
       }
+
+      @media(min-width: $DESKTOP-NORMAL) {
+        padding: 2px 8px;
+        font-size: 14px;
+        margin: 0;
+      }
+    }
+
+    &--form {
+      display: inherit;
     }
 
     &--reinitialiser {
@@ -152,6 +80,14 @@
       &:hover {
         color: white;
         background-color: darken($TURQUOISE, 5);
+      }
+
+      @media(min-width: $DESKTOP-NORMAL) {
+        padding: 2px 50px;
+        font-size: 14px;
+      }
+      @media(min-width: $DESKTOP-LARGE){
+        padding: 2px 74px;
       }
     }
   }
@@ -194,10 +130,36 @@
 
   &__couverture {
     width: 100%;
+    @media(min-width: $DESKTOP-NORMAL) {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+
+  &__foreground {
+    display: none;
+    @media(min-width: $DESKTOP-NORMAL) {
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      width: 210px;
+      height: 100%;
+      z-index: 1;
+      margin-left: 15px;
+    }
+    @media(min-width: $DESKTOP-LARGE) {
+      width: 255px;
+    }
   }
 
   &__lesLivres {
-
+    @media(min-width: $DESKTOP-NORMAL) {
+      margin-bottom: 10px;
+    }
   }
 
   &__lien {
@@ -211,6 +173,7 @@
       cursor: default;
       text-decoration: none;
     }
+
   }
 
   &__livre {
@@ -218,11 +181,28 @@
     width: 100%;
     margin-bottom: 5%;
     height: 350px;
-    background-image: linear-gradient(to right, $GRIS_FONCE , #555);
+    background-image: linear-gradient(to right, $GRIS_FONCE, #555);
+
+    @media(min-width: $DESKTOP-NORMAL) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      position: absolute;
+      top: 5%;
+      left: 10%;
+      width: 80%;
+      height: 90%;
+      z-index: 11;
+      background-image: none;
+    }
 
     &__titreEtAuteur {
       padding-left: 5%;
       padding-top: 5%;
+      @media(min-width: $DESKTOP-NORMAL) {
+        padding: 0;
+        margin: 0;
+      }
     }
 
     &__boutons {
@@ -235,17 +215,38 @@
   &__nbParPages {
     font-size: 16px;
     padding-left: 5%;
+
+    &__label {
+      @media(min-width: $DESKTOP-NORMAL) {
+        padding-left: 50px;
+      }
+    }
+  }
+
+  &__pagination {
+    margin-bottom: 2%;
+    margin-left: 20px;
+    margin-top: 23px;
+    @media(min-width: $DESKTOP-NORMAL) {
+      margin-top: 15px;
+      margin-left: 60px;
+    }
   }
 
   &__prix {
     font-size: 42px;
     color: white;
+    @media(min-width: $DESKTOP-NORMAL) {
+      font-size: 16px;
+    }
   }
 
   &__rechercher {
     display: none;
     @media (min-width: $DESKTOP-NORMAL) {
+      height: 25px;
       display: inline;
+      margin-left: 10px;
     }
   }
 
@@ -258,6 +259,9 @@
       text-decoration: none;
     }
 
+    @media(min-width: $DESKTOP-NORMAL) {
+      font-size: 20px;
+    }
   }
 
   &__trier {
@@ -265,10 +269,15 @@
     margin-bottom: 2%;
     padding-left: 5%;
 
-    & label {
-      font-size: 14px;
-      padding-right: 10px;
+    &__label {
+      margin-left: 10px;
+    }
 
+    &--select {
+      @media(min-width: $DESKTOP-NORMAL) {
+        height: 25px;
+        margin-left: 3px;
+      }
     }
   }
 
@@ -279,10 +288,15 @@
   display: inline;
   background-color: $TURQUOISE;
   color: white;
-  padding: 10px 32px;
+  padding: 10px 100px;
   font-size: 16px;
   border: none;
   border-radius: 50px;
+  margin-left: 30%;
+  @media(min-width: $TABLETTE) {
+    margin-left: 0;
+  }
+
   @media (min-width: $DESKTOP-NORMAL) {
     display: none;
   }
@@ -301,6 +315,7 @@
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  margin-left: 20%;
 }
 
 .dropdown-content a {
