Ajout d'un style universel pour le bouton d'ajout au panier

--- a/ressources/liaisons/scss/styles.scss
+++ b/ressources/liaisons/scss/styles.scss
@@ -37,6 +37,7 @@ $hamburger-layer-spacing: 10px;
 @import "modules/general";
 @import "modules/header";
 @import "modules/footer";
+@import "modules/boutons";
 
 /*** Pages ***/
 @import "pages/accueil";
