--- a/ressources/liaisons/scss/pages/_panier.scss
+++ b/ressources/liaisons/scss/pages/_panier.scss
@@ -1,55 +1,84 @@
 .panier{
+  .infosLivraison{
+    color: $ROUGE;
+
+    &__titre{
+      font-weight: bold;
+    }
+  }
   &__items{
-    border: 2px solid #000;
-    padding: 2% 0;
     margin-bottom: 5%;
 
     &__item{
       border-bottom: 2px solid #000;
-
-      .infosLivre{
-        &__titreLivre{
-          font-family: $policeTitres;
-          font-weight: bold;
-          @include fontSize(24px);
-        }
-
-        &__auteurLivre{
-
-        }
-      }
-
-      .formLivre{
-        form{
-          display: flex;
-          flex-direction: column;
-
-          select{
-            margin-bottom: 4%;
-          }
-
-          #updatePanier{
-            color: #fff;
-            padding: 5% 0;
-            background-color: $TURQUOISE;
-            border: none;
-            border-radius: 35px;
-          }
-        }
-      }
-
-      .prixLivre{
-
-      }
+      padding: 2% 0;
 
       &:last-child{
-        border-bottom: none;
+        border-bottom: 0;
+      }
+
+      .section{
+        &Droite{
+          &__image {
+
+            img {
+              max-width: 100%;
+            }
+          }
+        }
+
+        &Centre{
+          form{
+            label{
+              @include fontSize(18px);
+              font-weight: bold;
+            }
+
+            .boutons{
+
+              .select{
+                select{
+                  width: 100%;
+                  appearance: none;
+                  padding: 5px 12px;
+                  border-radius: 35px;
+                  margin-bottom: 2%;
+                  position: relative;
+                }
+
+                &::after{
+                  content: "▼";
+                  color: white;
+                  @include fontSize(22px);
+                  line-height: 38px;
+                  padding-left: 9px;
+                  position: absolute;
+                  border-radius: 35px;
+                  right: 11px;
+                  width: 36px;
+                  height: 36px;
+                  background-color: #008571;
+                  pointer-events: none;
+                }
+              }
+
+              #updatePanier{
+
+              }
+            }
+          }
+        }
+      }
+      .infosLivre{
+
       }
     }
   }
 
   &__infosPanier{
     position: relative;
+    border: 1px solid black;
+    padding: 2%;
 
     .contenu{
       position: sticky;
