--- a/ressources/liaisons/scss/pages/_accueil.scss
+++ b/ressources/liaisons/scss/pages/_accueil.scss
@@ -16,7 +16,7 @@
         display: block;
         text-align: center;
         width: 100%;
-        top: 30%;
+        top: 20%;
         img {
           width: 50%;
           height: auto;
@@ -34,7 +34,7 @@
         text-align: center;
         margin: 0 auto;
         width: 100%;
-        bottom: 25%;
+        bottom: 35%;
         a {
           border: solid 2px $PEAU;
           border-radius: 50px;
@@ -149,7 +149,7 @@
           font-size: 10px;
           padding: 5px;
         }
-        &__bouton_panier {
+        .bouton_panier {
           padding: 5px;
           margin-top: 7px;
           font-size: 10px;
